[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-tts"
version = "1.1.20"
description = "F5-TTS: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "accelerate==1.14.0",
    "bitsandbytes==0.49.2; platform_machine!='arm64' and platform_system!='Darwin'",
    "cached_path==1.8.10",
    "click==8.4.2",
    "datasets==5.0.0",
    "ema-pytorch==0.5.2",
    "gradio==6.10.0",
    "huggingface-hub==0.36.2",
    "hydra-core==1.3.3",
    "librosa==0.11.0",
    "matplotlib==3.11.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "psutil==7.1.3",
    "pydub==0.25.1",
    "pypinyin==0.55.0",
    "rjieba==0.2.1",
    "safetensors==0.7.0",
    "soundfile==0.13.1",
    "tomli==2.3.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchcodec==0.0.3",
    "torchdiffeq==0.2.5",
    "torchvision==0.19.1",
    "tqdm==4.67.1",
    "transformers==4.44.2",
    "transformers_stream_generator==0.0.5",
    "triton==3.0.0",
    "unidecode==1.4.0",
    "vocos==0.1.0",
    "wandb==0.23.1",
    "x-transformers==1.31.14",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "zhconv",
    "zhon",
]

[project.urls]
Homepage = "https://github.com/SWivid/F5-TTS"

[project.scripts]
"f5-tts_infer-cli" = "f5_tts.infer.infer_cli:main"
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
"f5-tts_finetune-cli" = "f5_tts.train.finetune_cli:main"
"f5-tts_finetune-gradio" = "f5_tts.train.finetune_gradio:main"
